gcc/testsuite/g++.dg/ext/stmtexpr12.C
// PR c++/29000
// { dg-options "" }

template<int> int foo()
{
  return ({foo;})==0;		// { dg-error "insufficient context" }
}
